--- a/to-do-list-app/src/index.css
+++ b/to-do-list-app/src/index.css
@@ -1,13 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*Styles for the TaskInput Component*/
+
+from {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+
+}
+input [type="text"] {
+  margin-bottom: 10px;
+  padding: 8px;
+  font-size: 16px;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button{
+  padding: 8px 12px;
+  border: none;
+  cursor: pointer;
+}
+
+
+/* Styling for the TaskList Component*/
+
+ul{
+  list-style: none;
+  padding:0;
+}
+
+li{
+
+  align-items: center;
+  margin-bottom: 10px;
+  display: flex;
+}
+input[type="checkbox"] {
+  margin-right: 10px;
+}
+
+button{
+  background-color: #61dafb;
+  color: #fff;
+  border: none;
+  cursor: pointer;
 }
